--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,7 +10,7 @@ django-health-check==3.17.0
 django_redis
 django-permissions-policy==4.14.0
 django-cors-headers==3.13.0
-django-ckeditor
+django-ckeditor-5==0.2.13
 django-csp==3.6
 weasyprint==52.5
 psycopg2>=2.9.5
@@ -32,3 +32,4 @@ opentelemetry-exporter-otlp
 django-debug-toolbar==4.0.0
 django-encrypted-model-fields==0.6.5
 isoweek==1.3.3
+beautifulsoup4==4.12.3
